--- a/Assets/JamPack/Script/Editor/JamPack.Editor.asmdef
+++ b/Assets/JamPack/Script/Editor/JamPack.Editor.asmdef
@@ -2,7 +2,8 @@
     "name": "MPack.Editor",
     "rootNamespace": "",
     "references": [
-        "GUID:7df56073ffc3d43788299df0d4c2d898"
+        "GUID:7df56073ffc3d43788299df0d4c2d898",
+        "GUID:3a9781db4804a9945b9883f3a7c46d45"
     ],
     "includePlatforms": [
         "Editor"
