--- a/Assets/JamPack/Script/Editor/JamPack.Editor.asmdef
+++ b/Assets/JamPack/Script/Editor/JamPack.Editor.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:7df56073ffc3d43788299df0d4c2d898",
-        "GUID:3a9781db4804a9945b9883f3a7c46d45"
+        "GUID:3a9781db4804a9945b9883f3a7c46d45",
+        "GUID:613783dc1674e844b87788ea74ede0f6"
     ],
     "includePlatforms": [
         "Editor"
