--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.2d.tilemap.extras": "https://github.com/Unity-Technologies/2d-extras.git#2020.3",
     "com.unity.collab-proxy": "1.13.5",
     "com.unity.ide.vscode": "1.2.4",
     "com.unity.test-framework": "1.1.29",
